# LivestreamTrap

./: .env-example  .gitignore  .gitignore.py  Dockerfile  README.md  celerybeat-schedule.bak  db.sqlite3  debug_db.py  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
LivestreamTrap/: asgi.py  celery.py  local_settings.py  settings.py  urls.py  wsgi.py
myapp/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
myapp/migrations/: 0001_initial.py  0002_taskmodel_alter_mymodel_dropdown_field.py  0003_task.py  0004_remove_mymodel_dropdown_field_and_more.py  0005_alter_mymodel_interval_alter_mymodel_name.py  0006_alter_mymodel_name.py
myapp/services/: __init__.py  live_stream_service.py
myproject/: huey.py  settings.py  urls.py
templates/: base.html
templates/myapp/: base.html  downloads_template.html  my_template.html  tasks_template.html
templates/tracker/: downloads.html  main.html  tasks.html
tracker/: admin.py  forms.py  models.py  recording.py  tasks.py  urls.py  utils.py  views.py  youtube_api.py  youtube_service.py
tracker/management/commands/: test_youtube.py
tracker/migrations/: 0001_initial.py  0002_alter_channel_country.py  0003_channel_description_channel_youtube_channel_id.py
