[project]
name = "livestreamtrap"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "celery>=5.5.3",
    "django>=5.2.5",
    "django-celery-beat>=2.8.1",
    "pillow>=11.3.0",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "selenium>=4.35.0",
]
